<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="480dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/resistor_img" 
        android:contentDescription="@string/resistor_img_dsc" />

    <View
        android:id="@+id/band1"
        android:layout_width="10dp"
        android:layout_height="57dp"
        android:layout_alignLeft="@id/imageView1"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="85dp"
        android:background="#964b00" />

    <View
        android:id="@+id/band2"
        android:layout_width="10dp"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="85dp"
        android:layout_toRightOf="@id/band1"
        android:background="#000000" />

    <View
        android:id="@+id/band3"
        android:layout_width="10dp"
        android:layout_height="57dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="85dp"
        android:layout_toRightOf="@id/band2"
        android:background="#964b00" />

    <View
        android:id="@+id/colour4"
        android:layout_width="10dp"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="85dp"
        android:layout_toRightOf="@id/band3"
        android:background="#ffd700" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/imageView1"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="2dip"
        android:background="#666666" />

    <TextView
        android:id="@+id/resistance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip"
        android:layout_marginTop="20dip"
        android:text="@string/resistance_label" />

    <EditText
        android:id="@+id/resistance_value"
        android:digits="true"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resistance_text"
        android:layout_alignBottom="@+id/resistance_text"
        android:layout_toRightOf="@+id/resistance_text"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resistance_value"
        android:layout_alignBottom="@+id/resistance_value"
        android:layout_marginLeft="2dip"
        android:layout_toRightOf="@+id/resistance_value"
        android:text="@string/ohm_symbol" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resistance_text"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tolerance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="8dip"
            android:text="@string/tolerance_label" />

        <RadioGroup
            android:id="@+id/tolerances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/five_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:checked="true"
                android:text="@string/tolerance_radio_5" />

            <RadioButton
                android:id="@+id/ten_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/tolerance_radio_10" />

            <RadioButton
                android:id="@+id/twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/tolerance_radio_20" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/get_resistor_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:layout_marginTop="30dip"
        android:onClick="getResistanceClicked"
        android:text="@string/get_resistance_button" />

</RelativeLayout>